# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
tests/: test__main.py
tools/: apply.py
